--- a/partidas/templates/partidas/buscando.html
+++ b/partidas/templates/partidas/buscando.html
@@ -44,7 +44,7 @@
     console.log(unido, typeof unido)
 
     document.addEventListener('DOMContentLoaded', function () {
-        socket = new WebSocket('wss://www.tictactoe.katiosca.com/ws/partida/buscando/' + pk.textContent);
+        socket = new WebSocket('wss://www.tictactoe.sealena.com/ws/partida/buscando/' + pk.textContent);
 
         socket.onopen = function () {
             if (unido.textContent === 'True'){
